added and styled heading footer and general layout

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/.style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Thomas | Full Stack</title>
 </head>
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="header">
     <a href="index.html"><img src="assets/images/DP.jpg" alt="man smiling holding certificate" class="img-thumbnail"></a>
     <h1>Thomas Jackson | Full Stack Developer </h1>
     <p>**insert witty / philosophical quote here**</p> 
@@ -33,20 +33,32 @@
   </ul>
 </nav>
 
-<div class="row text-center">
-  <div class="col-sm-4">
-    <h1>About Me</h1>
-    <p>Hello and welcome to my website! I have created this to demonstrate my newly acquired HTML / CSS & Bootstrap Skills</p>
-
-  </div>
-    <div class="col-sm-8">
-    <h1>Brief Personal History</h1>
-    <p>I was born and raised in Castlemorton Worcestershire, schooled at Hanley Castle High School and my first job was planning gas works for Murphy Pipelines. After the 2008 financial crisis, I became a Corporate Travel Agent and after a short time relocated to London to set up and manage global travel programmes for Insurance, Fashion Companies and Government Departments. Sadly due to the impact of Covid 19 I was made redundant, but this pushed me to follow my passion for computing a gaming</p>
-    </div>
+<div class="home">
+    <h1>Home</h1>
+    <p>Home is where the heart is</p> 
 </div>
 
-<div class="jumbotron text-center" id="footer">
-  <h3>Follow Me</h3>
+<div class="row">
+  <div class="column left">
+    <h1>About Me</h1>
+    <p>Hello and welcome to my website! I have created this to demonstrate my newly acquired HTML / CSS & Bootstrap Skills</p>
+  </div>
+
+  <div class="column right">
+    <h1>Brief Personal History</h1>
+    <p>I was born and raised in Castlemorton Worcestershire, schooled at Hanley Castle High School and my first job was planning gas works for Murphy Pipelines. After the 2008 financial crisis, I became a Corporate Travel Agent and after a short time relocated to London to set up and manage global travel programmes for Insurance, Fashion Companies and Government Departments. Sadly due to the impact of Covid 19 I was made redundant, but this pushed me to follow my passion for computing a gaming</p>
+  </div>
+</div>
+
+<div class="footer">
+ <h3>Follow Me</h3>
+    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://twitter.com/"target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/"target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/?gl=GB&hl=en-GB"target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://www.linkedin.com/"target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/"target="_blank"><i class="fab fa-github"></i></a>
+    <a href="assets/images/profile-cv.pdf" download="profile cv"><i class="fas fa-file-pdf"></i></a>
 </div>
     
 </body>
