created read me

--- a/contact.html
+++ b/contact.html
@@ -29,19 +29,29 @@
     </li>
      <li class="nav-item">
       <a class="nav-link" href="assets/images/profile cv.pdf" target="_blank"> <i class="fas fa-file-pdf"></i> CV</a>
-    </li>
+      </li>
   </ul>
 </nav>
 
-<div class="home">
-    <h1>Home</h1>
-    <p>Home is where the heart is</p>
+<div class="About">
+    <h1>Contact</h1>
+    <p>Let's connect</p>
 </div>
 
 <div class="row">
   <div class="column left">
-    <h1>About Me</h1>
-    <p>Hello and welcome to my website! I have created this to demonstrate my newly acquired HTML / CSS & Bootstrap Skills</p>
+  <h1>Contact Me</h1>
+    <div id="form">
+        <form>
+            <input type="text" placeholder="Name">
+            <br>
+            <input type="text" placeholder="Email Address">
+            <br>
+            <textarea name="Subject" id="text-box" cols="30" rows="10" placeholder="Message"></textarea>
+            <br>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
   </div>
 
   <div class="column right">
