--- a/about.html
+++ b/about.html
@@ -29,13 +29,13 @@
     </li>
      <li class="nav-item">
       <a class="nav-link" href="assets/images/profile cv.pdf" target="_blank"> <i class="fas fa-file-pdf"></i> CV</a>
-    </li>
+      </li>
   </ul>
 </nav>
 
-<div class="home">
-    <h1>Home</h1>
-    <p>Home is where the heart is</p>
+<div class="About">
+    <h1>About</h1>
+    <p>"I have feelings too. I am still human. All I want is to be loved, for myself and for my talent." - Marilyn Monroe. </p>
 </div>
 
 <div class="row">
