updated about me page with links and skills

--- a/about.html
+++ b/about.html
@@ -28,14 +28,14 @@
       <a class="nav-link" href="contact.html"> <i class="fas fa-address-card"></i> Contact</a>
     </li>
      <li class="nav-item">
-      <a class="nav-link" href="assets/images/profile cv.pdf" target="_blank"> <i class="fas fa-file-pdf"></i> CV</a>
+      <a class="nav-link" href="assets/images/profile_cv.pdf" target="_blank"> <i class="fas fa-file-pdf"></i> CV</a>
       </li>
   </ul>
 </nav>
 
 <div class="About">
     <h1>About</h1>
-    <p>"I have feelings too. I am still human. All I want is to be loved, for myself and for my talent." - Marilyn Monroe. </p>
+    <p>"what I do have are a very particular set of skills." - Liam Neeson. </p>
 </div>
 
 <div class="row">
@@ -45,19 +45,29 @@
   </div>
 
   <div class="column right">
-    <h1>Brief Personal History</h1>
-    <p>I was born and raised in Castlemorton Worcestershire, schooled at Hanley Castle High School and my first job was planning gas works for Murphy Pipelines. After the 2008 financial crisis, I became a Corporate Travel Agent and after a short time relocated to London to set up and manage global travel programmes for Insurance, Fashion Companies and Government Departments. Sadly due to the impact of Covid 19 I was made redundant, but this pushed me to follow my passion for computing a gaming</p>
-  </div>
+    <h1>Skills</h1>
+    <p>I have been learning a particulat set of skills </p>
+
+    <a href="https://html.com/" target="_blank"><i class="fab fa-html5"></i> - HTML5 - Hyper Text Markup Language or HTML is the standard markup language for Web pages.</a>
+    <br>
+    <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank"><i class="fab fa-css3"></i> - CSS3 - CSS stands for Cascading Style Sheets, it describes how HTML elements are to be displayed on screen, paper, or in other media.</a>
+    <br>
+    <a href="https://www.javascript.com/" target="_blank"><i class="fab fa-js-square"></i> - JavaScript - JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</a>
+    <br>
+    <a href="https://www.python.org/" target="_blank"><i class="fab fa-python"></i> - Python - Python is an interpreted, high-level and general-purpose programming language.</a>
+    <br>
+
+    </div>
 </div>
 
 <div class="footer">
  <h3>Follow Me</h3>
     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://twitter.com/"target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="https://www.instagram.com/"target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/?gl=GB&hl=en-GB"target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.linkedin.com/"target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/"target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/?gl=GB&hl=en-GB" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
     <a href="assets/images/profile-cv.pdf" download="profile cv"><i class="fas fa-file-pdf"></i></a>
 </div>
     
