--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <a class="nav-link" href="contact.html"> <i class="fas fa-address-card"></i> Contact</a>
     </li>
      <li class="nav-item">
-      <a class="nav-link" href="assets/images/profile cv.pdf" target="_blank"> <i class="fas fa-file-pdf"></i> CV</a>
+      <a class="nav-link" href="assets/images/profile_cv.pdf" target="_blank"> <i class="fas fa-file-pdf"></i> CV</a>
     </li>
   </ul>
 </nav>
@@ -50,15 +50,15 @@
   </div>
 </div>
 
-<div class="footer">
- <h3>Follow Me</h3>
-    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://twitter.com/"target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="https://www.instagram.com/"target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/?gl=GB&hl=en-GB"target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.linkedin.com/"target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/"target="_blank"><i class="fab fa-github"></i></a>
-    <a href="assets/images/profile-cv.pdf" download="profile cv"><i class="fas fa-file-pdf"></i></a>
+<div class="footer">↩
+ <h3>Follow Me</h3>↩
+    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>↩
+    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>↩
+    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>↩
+    <a href="https://www.youtube.com/?gl=GB&hl=en-GB" target="_blank"><i class="fab fa-youtube"></i></a>↩
+    <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>↩
+    <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>↩
+    <a href="assets/images/profile-cv.pdf" download="profile cv"><i class="fas fa-file-pdf"></i></a>↩
 </div>
     
 </body>
