updated about me site

--- a/about.html
+++ b/about.html
@@ -46,29 +46,58 @@
 
   <div class="column right">
     <h1>Skills</h1>
-    <p>I have been learning a particulat set of skills </p>
+    <p>Through the Code Institute, I have been learning all the relevant skills in order to build a fully functioning website.</p>
 
-    <a href="https://html.com/" target="_blank"><i class="fab fa-html5"></i> - HTML5 - Hyper Text Markup Language or HTML is the standard markup language for Web pages.</a>
-    <br>
-    <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank"><i class="fab fa-css3"></i> - CSS3 - CSS stands for Cascading Style Sheets, it describes how HTML elements are to be displayed on screen, paper, or in other media.</a>
-    <br>
-    <a href="https://www.javascript.com/" target="_blank"><i class="fab fa-js-square"></i> - JavaScript - JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</a>
-    <br>
-    <a href="https://www.python.org/" target="_blank"><i class="fab fa-python"></i> - Python - Python is an interpreted, high-level and general-purpose programming language.</a>
-    <br>
-
+        <a href="https://html.com/" target="_blank">
+            <i class="fab fa-html5"></i> - HTML5 - Hyper Text Markup Language or HTML is the standard markup language for Web pages.
+        </a>
+        <br>
+        <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank">
+            <i class="fab fa-css3"></i> - CSS3 - CSS stands for Cascading Style Sheets, it describes how HTML elements are to be displayed on screen, paper, or in other media.
+        </a>
+            <br>
+        <a href="https://www.javascript.com/" target="_blank">
+            <i class="fab fa-js-square"></i> - JavaScript - JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
+        </a>
+            <br>
+        <a href="https://www.python.org/" target="_blank"><i class="fab fa-python">
+            </i> - Python - Python is an interpreted, high-level and general-purpose programming language.
+        </a>
+            <br>
+        <a href="https://github.com/" target="_blank"><i class="fab fa-github">
+            </i> - GitHub - GitHub provides hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git.
+        </a>
+            <br>
+        <a href="https://www.mysql.com/" target="_blank"><i class="fas fa-database">
+            </i> - SQL Databases - SQL - SQL is a domain-specific language used in programming and designed for managing data held in a relational database management system.
+        </a>
+            <br>
     </div>
 </div>
 
 <div class="footer">
  <h3>Follow Me</h3>
-    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/?gl=GB&hl=en-GB" target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="assets/images/profile-cv.pdf" download="profile cv"><i class="fas fa-file-pdf"></i></a>
+    <a href="https://www.facebook.com/" target="_blank">
+        <i class="fab fa-facebook"></i>
+    </a>
+    <a href="https://twitter.com/" target="_blank">
+        <i class="fab fa-twitter"></i>
+    </a>
+    <a href="https://www.instagram.com/" target="_blank">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.youtube.com/?gl=GB&hl=en-GB" target="_blank">
+        <i class="fab fa-youtube"></i>
+    </a>
+    <a href="https://www.linkedin.com/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://github.com/" target="_blank">
+        <i class="fab fa-github"></i>
+    </a>
+    <a href="assets/images/profile-cv.pdf" download="profile cv">
+        <i class="fas fa-file-pdf"></i>
+    </a>
 </div>
     
 </body>
