updated page headings and skills section with links and some css

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   </ul>
 </nav>
 
-<div class="About">
+<div class="about">
     <h1>About</h1>
     <p>"what I do have are a very particular set of skills." - Liam Neeson. </p>
 </div>
@@ -47,31 +47,36 @@
   <div class="column right">
     <h1>Skills</h1>
     <p>Through the Code Institute, I have been learning all the relevant skills in order to build a fully functioning website.</p>
-
-        <a href="https://html.com/" target="_blank">
-            <i class="fab fa-html5"></i> - HTML5 - Hyper Text Markup Language or HTML is the standard markup language for Web pages.
-        </a>
-        <br>
-        <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank">
-            <i class="fab fa-css3"></i> - CSS3 - CSS stands for Cascading Style Sheets, it describes how HTML elements are to be displayed on screen, paper, or in other media.
-        </a>
-            <br>
-        <a href="https://www.javascript.com/" target="_blank">
-            <i class="fab fa-js-square"></i> - JavaScript - JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
-        </a>
-            <br>
-        <a href="https://www.python.org/" target="_blank"><i class="fab fa-python">
-            </i> - Python - Python is an interpreted, high-level and general-purpose programming language.
-        </a>
-            <br>
-        <a href="https://github.com/" target="_blank"><i class="fab fa-github">
-            </i> - GitHub - GitHub provides hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git.
-        </a>
-            <br>
-        <a href="https://www.mysql.com/" target="_blank"><i class="fas fa-database">
-            </i> - SQL Databases - SQL - SQL is a domain-specific language used in programming and designed for managing data held in a relational database management system.
-        </a>
-            <br>
+        <div>
+            <h2><a href="https://html.com/" target="_blank"> <i class="fab fa-html5"></i>- HTML5 </a></h2> 
+            <p>Hyper Text Markup Language or HTML is the standard markup language for Web pages.</p>
+        </div>
+    <br>
+        <div>
+            <h2><a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank"><i class="fab fa-css3"></i> - CSS3 </a></h2>
+            <p> CSS stands for Cascading Style Sheets, it describes how HTML elements are to be displayed on screen, paper, or in other media.</p>
+    
+        </div>
+    <br>
+        <div>
+            <h2><a href="https://www.javascript.com/" target="_blank"><i class="fab fa-js-square"></i> - JavaScript </a></h2>
+            <p>JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.</p>
+        </div>
+    <br>
+        <div>
+            <h2><a href="https://www.python.org/" target="_blank"><i class="fab fa-python"></i> - Python</a></h2>
+            <p>Python is an interpreted, high-level and general-purpose programming language.</p>
+        </div>
+    <br>
+        <div>
+            <h2><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i> - GitHub</a></h2>
+            <p>GitHub provides hosting for software development and version control using Git. It offers the distributed version control and source code management functionality of Git.</p>
+        </div>
+    <br>
+        <div>
+            <h2><a href="https://www.mysql.com/" target="_blank"><i class="fas fa-database"></i> - SQL Databases </a></h2>
+            <p>SQL is a domain-specific language used in programming and designed for managing data held in a relational database management system.</p>
+        </div>
     </div>
 </div>
 
