--- a/testing.html
+++ b/testing.html
@@ -1,13 +1,15 @@
-<link rel="stylesheet" href="assets/style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/style.css">
+    <title>Thomas | Full Stack</title>
+</head>
 
-<div id="form">
-    <form>
-        <input type="text" placeholder="Name">
-        <br>
-        <input type="text" placeholder="Email Address">
-        <br>
-        <textarea name="Subject" id="text-box" cols="30" rows="10" placeholder="Message"></textarea>
-        <br>
-        <input type="submit" value="Submit">
-    </form>
+<div>
+    <h2><a href="https://html.com/" target="_blank"> <i class="fab fa-html5"></i>- HTML5 </a></h2> 
+        <p>Hyper Text Markup Language or HTML is the standard markup language for Web pages.</p>
 </div>
